<resources>
    <string name="app_name">DyslexReader</string>

    <!-- MAIN ACTIVITY  -->
    <string name="btnReaderLabel">Read</string>
    <string name="btnWebLabel">Web</string>
    <string name="btnCameraLabel">Camera</string>
    <string name="btnPasteLabel">Paste</string>
    <string name="btnSettingsLabel">Settings</string>
    <string name="toastSendError">Selecione algum texto antes de enviar para o Leitor</string>
    <string name="tvPreviewHint">This window will show the text that will be modified.</string>

    <!-- READER ACTIVITY  -->
    <string name="btnNextWordLabel">Next Word</string>
    <string name="btnPreviousWordLabel">Prev. Word</string>
    <string name="btnAnalyzeWordLabel">Analyze</string>

    <!--CAMERA ACTIVITY-->

    <string name="btnTakePhoto">Take photo</string>
    <string name="btnTakeText">Take text</string>

    <!-- ANALYSIS ACTIVITY  -->
    <string name="wordToAnalyzeKey">WordToAnalyze</string>
    <string name="btnPronunciationLabel">Play sound</string>
    <string name="file">WEB</string>
    <string name="errHyphenationNotAvailable">Hyphenation not Available</string>
    <string name="errDefinitionNotAvailable">Definition not Available</string>
    <string name="errAudioNotAvailable">Audio not Available</string>


    <!-- HTTP POPUP-->
    <string name="btnGetTextLabel">Get From site</string>
    <string name="tvLinkHint">URL from site</string>
    <string name="btnClosePopUP">Close</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="settingsLabel">Settings</string>

    <string name="whiteNoiseKey" translatable="false">whiteNoise</string>
    <string name="whiteNoiseTitle">Play White Noise</string>
    <string name="whiteNoiseSummary">Plays White Noise to reduce noise distractions</string>

    <string name="firstLastColorsKey" translatable="false">firstLastColors</string>
    <string name="firstLastColorsTitle">Change prefix suffix color</string>
    <string name="firstLastColorsSummary">Changes color of first and last letters</string>

    <string name="readingModeKey" translatable="false">readingMode</string>
    <string name="readingModeTitle">Reading Mode</string>
    <string name="readingModeSummary">Choose Reading mode</string>
    <string name="readingModeDialog">Choose Reading mode</string>
    <string name="readingModeLabelHighlight">Highlight</string>
    <string name="readingModeLabelWordByWord">Word By Word</string>
    <string name="readingModeValueHighlight" translatable="false">highlight</string>
    <string name="readingModeValueWordByWord" translatable="false">wordByWord</string>

    <string name="themeKey" translatable="false">theme</string>
    <string name="themeTitle">Theme</string>
    <string name="themeSummary">Change the visual appearance</string>
    <string name="themeDialog">Choose Your theme</string>
    <string name="themeLabelLight">Light</string>
    <string name="themeLabelDark">Dark</string>
    <string name="themeLabelCustom">Custom</string>
    <string name="themeValueLight" translatable="false">light</string>
    <string name="themeValueDark" translatable="false">dark</string>
    <string name="themeValueCustom" translatable="false">custom</string>




    <string name="themeCustomReminder">Remember to change the Theme to "Custom" to apply your theme</string>

    <string name="themeCustomPrimaryTextKey" translatable="false">customPrimaryTextColor</string>
    <string name="themeCustomPrimaryTextTitle">Custom Primary Text color</string>

    <string name="themeCustomSecondaryTextKey" translatable="false">customSecondaryTextColor</string>
    <string name="themeCustomSecondaryTextTitle">Custom Secondary Text color</string>

    <string name="themeCustomBackgroundKey" translatable="false">customBackgroundColor</string>
    <string name="themeCustomBackgroundTitle">Custom Background color</string>

    <string name="themeCustomTextviewBackgroundKey" translatable="false">customTextviewBackgroundColor</string>
    <string name="themeCustomTextviewTitle">Custom Text background color</string>

    <string name="themeCustomHighlightKey" translatable="false">customHighlightColor</string>
    <string name="themeCustomHighlightTitle">Custom Highlight color</string>

    <string name="themeCustomPrefixKey" translatable="false">customPrefixColor</string>
    <string name="themeCustomPrefixTitle">Custom Prefix Color</string>

    <string name="themeCustomSuffixKey" translatable="false">customSuffixColor</string>
    <string name="themeCustomSuffixTitle">Custom Suffix Color</string>

    <string name="holdTimeKey" translatable="false">holdTime</string>
    <string name="holdTimeTitle">Hold Time</string>
    <string name="holdTimeSummary">Time in tenths of second to hold button for next/previous word</string>

    <string name="settingsButton">Setings</string>
</resources>
